--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     </div>
     <div class="containerbg">
         <img class="picturebg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToPq0JhEES5v5e--qbeSPvPLvH95Rnk-SKrQ&usqp=CAU" alt="Sanic giving the thumbs up">
-    </div>
+        <img class="picturebg" src="https://i.redd.it/u5dexq6zgj061.png" alt="Sanic aumung us">
+      </div>
   </body>
 </html>
+
+
